Dark mode fixes

--- a/styles/ant.less
+++ b/styles/ant.less
@@ -18,6 +18,10 @@ body {
   padding: 16px;
 }
 
+.ant-menu-submenu-title {
+  background-color: var(--cr-primary-bg);
+}
+
 .ant-menu-title-content {
   font-size: 14px;
   line-height: 20px;
