--- a/styles/navigationmenu.module.less
+++ b/styles/navigationmenu.module.less
@@ -5,6 +5,7 @@
   border-right: none;
   max-height: 784px;
   overflow-y: auto;
+  background-color: var(--cr-primary-bg);
 
   :global(.ant-menu-submenu-title) {
     cursor: auto;
